Mit Colab erstellt

--- a/Agile_Quality_and_Sales_Insights.ipynb
+++ b/Agile_Quality_and_Sales_Insights.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMd3vlYR3mg9ySb5M2Y71d9",
+      "authorship_tag": "ABX9TyN1/7C0fPQ8m1bH8A7/VX4H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,36 @@
       "cell_type": "markdown",
       "source": [
         "#Agile Quality and Sales Insights\n",
-        "\n"
+        "\n",
+        "The recent scripts focus on analyzing both quality control (QC) and sales data to gain insights into product quality and performance across different product groups. Here's a summary of the scripts and the goals they achieve:\n",
+        "\n",
+        "**Assigning Quality Ratio to Parts with a Given Quality Range**\n",
+        "\n",
+        "This script assigns a quality ratio to each part in the manufacturing process, categorizing them as either \"S\" (Shopfloor) or \"O\" (Outsourced) based on their presence in the CR (Critical Ratio) optimized data.\n",
+        "It generates a CSV file with randomized quality ratios for each part, facilitating quality analysis.\n",
+        "\n",
+        "**Quality Metrics Calculation per Machine, Separated by Shopfloor and Outsourced Path**\n",
+        "\n",
+        "This script calculates quality metrics, specifically the average quality ratio, for parts labeled as \"S\" (Shopfloor) and \"O\" (Outsourced) per machine.\n",
+        "It provides insights into the quality performance of machines based on the path (Shopfloor or Outsourced) of the parts processed by them.\n",
+        "\n",
+        "**Simulated Sales Data and Part-to-Product Group Assignment**\n",
+        "\n",
+        "This script generates simulated sales data and assigns part IDs to product groups based on specified distribution percentages.\n",
+        "It calculates margins and growth rates for each product group and appends this information to the data.\n",
+        "The output is a CSV file with assigned product groups, margins, and growth rates, facilitating sales analysis and product grouping.\n",
+        "\n",
+        "**Combining Sales and QC Data for Product Group Analysis**\n",
+        "\n",
+        "This script merges sales and quality control (QC) data based on the 'Part ID' column.\n",
+        "It calculates the average quality ratio for each product group.\n",
+        "The output is a summary of the average quality ratio per product group, enabling analysis of product quality across different groups.\n",
+        "\n",
+        "**Overall Goal**\n",
+        "\n",
+        "These scripts collectively aim to provide comprehensive insights into product quality, sales performance, and product grouping within the manufacturing process.\n",
+        "By combining quality control and sales data, the scripts enable analysis of quality metrics across different dimensions such as machines, product groups, and manufacturing paths (Shopfloor vs. Outsourced).\n",
+        "The generated summaries and data outputs facilitate informed decision-making and quality improvement strategies within the manufacturing environment."
       ],
       "metadata": {
         "id": "O3E5gRF-dA0t"
