Mit Colab erstellt

--- a/Agile_Quality_and_Sales_Insights.ipynb
+++ b/Agile_Quality_and_Sales_Insights.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1/7C0fPQ8m1bH8A7/VX4H",
+      "authorship_tag": "ABX9TyP9Hra/0KCJjxJObPZCZgE7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,9 @@
         "\n",
         "These scripts collectively aim to provide comprehensive insights into product quality, sales performance, and product grouping within the manufacturing process.\n",
         "By combining quality control and sales data, the scripts enable analysis of quality metrics across different dimensions such as machines, product groups, and manufacturing paths (Shopfloor vs. Outsourced).\n",
-        "The generated summaries and data outputs facilitate informed decision-making and quality improvement strategies within the manufacturing environment."
+        "The generated summaries and data outputs facilitate informed decision-making and quality improvement strategies within the manufacturing environment.\n",
+        "\n",
+        "[Lean-IQ](https://www.lean-iq.com)"
       ],
       "metadata": {
         "id": "O3E5gRF-dA0t"
